# diplomado-ia-f

./: pyproject.toml
go/: movielens_in_go.go
omarjh/: nn_models.py
