[tool.poetry]
name = "diplomado-ia"
description = "Diploamado IA UNAM 2024-2025"
authors = ["OmarMJH"]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.12"
python-i18n = "==0.3.9"
pydot = "^3.0.4"
graphviz = "^0.20.3"

[tool.poetry.dev-dependencies]
autopep8 = "~=1.5"
attrs = ">25.0"
pylint = ">2.0.0"
pytest = "~=7.2"
pytest-cov = "~=4.0"
colorama = "^0.4.6"
termcolor = "^2.3.0"
pandas = "^2.2.1"
openpyxl = "^3.0.14"
pydash = "^8.0.0"
tensorflow = "~2.18.0"
keras = "~3.8.0"
ipykernel = ">6.29.5"
matplotlib = "^3.10.0"
opencv-python = ">4.11.0"
torch = "~2.6.0"
torchvision = "~0.21.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core", "setuptools~=65.6", "wheel~=0.37"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B403", "B301", "B311"]